--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7"
   }
 }
